trip has to be fixed, same for quadtree
and better pruning